2001-01-09  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.c (get_shift_alg): Remove an argument cpu.
	Change an argument mode of machine_mode to shift_mode of
	shift_mode.  Remove an extra error check.
	(emit_a_shift): Adopt to the new calling prototype of
	get_shift_alg.

2001-01-09  Nick Clifton  <nickc@redhat.com>

	* config/rs6000/rs6000.c (rs6000_sysv_varargs_p): Delete.
	(setup_incoming_varargs): Use sysv_varargs_p field of the
	cfun->machine structure.
	(struct machine_function): Move to rs6000.h
	(rs6000_save_machine_status): Delete.
	(rs6000_restore_machine_status): Delete.
	(rs6000_init_machine_status): New Function.
	(rs6000_free_machine_status): New Function.
	(rs6000_init_expanders): Use new functions.

	* config/rs6000/rs6000.h (rs6000_sysv_varargs_p): Delete
	export.
	(struct machine_function): Move here.

	* config/rs6000/sysv4.h (RS6000_VARARGS_AREA): Use
	sysv_varargs_p field of the cfun->machine structure.

	* config/rs6000/rs6000-protos.h (rs6000_save_machine_status):
	Remove prototype.
	(rs6000_restore_machine_status): Remove prototype.

2001-01-09  Richard Henderson  <rth@redhat.com>

	* sched-int.h (struct deps): Add max_reg, reg_last_in_use; merge
	reg_last_uses, reg_last_sets, reg_last_clobbers into struct deps_reg.
	* sched-deps.c (sched_analyze_1): Update uses of struct deps.
	(sched_analyze_2, sched_analyze_insn): Likewise.
	(sched_analyze, init_deps): Likewise.
	(free_deps): Likewise.  Iterate with EXECUTE_IF_SET_IN_REG_SET.
	* sched-rgn.c (propagate_deps): Likewise.  Remove max_reg argument.
	(compute_block_backward_dependences): Update propagate_deps call.

2001-01-09  Mark Elbrecht  <snowball3@bigfoot.com>

	* gcc.c (process_command): Set switches[n_switches].ordering to 0.

2001-01-09  Neil Booth  <neil@daikokuya.demon.co.uk>

        * cppinit.c (OPT_MD, OPT_MMD): Restore.
        (cpp_handle_option): Handle them.
        (cpp_post_options): Ensure one of -M or -MM is specified with
        any other -M? option.